--- a/Proyecto web/css/Estilos.css
+++ b/Proyecto web/css/Estilos.css
@@ -261,13 +261,16 @@ a{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 :root{
-    --colorTextos: #49454567;
+    --colorTextos: #00000067;
 }
 .box{
     background-image: url(zeldawallpaperproyecto.jpg);
-    background-size: 100vw 100vh;
-    background-attachment: fixed;
-    margin: 0;
+    width: 100%;
+      height: 650px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: black;
 
 }
 .form1{
